# ChangeLog for media-libs/urt
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/urt/ChangeLog,v 1.32 2012/05/09 00:22:54 aballier Exp $

  09 May 2012; Alexis Ballier <aballier@gentoo.org> urt-3.1b-r1.ebuild:
  keyword ~amd64-fbsd

  26 Dec 2009; Peter Volkov <pva@gentoo.org> urt-3.1b-r1.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

  23 May 2008; Markus Meier <maekke@gentoo.org> urt-3.1b-r1.ebuild:
  drop to ~mips (unstable deps)

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; urt-3.1b-r1.ebuild:
  Drop virtual/x11 references.

  01 Mar 2007; <genstef@gentoo.org> urt-3.1b-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  17 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/urt-3.1b-make.patch, urt-3.1b-r1.ebuild:
  Add patch to fix usage of make vs $(MAKE) with some flags enabled.

  12 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> urt-3.1b-r1.ebuild:
  Add ~x86-fbsd keyword.

  20 Mar 2006; Mike Frysinger <vapier@gentoo.org>
  files/urt-3.1b-build-fixes.patch:
  Patch by Diego Pettenò to respect user LDFLAGS #126872.

  11 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; urt-3.1b-r1.ebuild:
  Add modular X dependencies.

  20 Nov 2005; Hardave Riar <hardave@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on mips, dep for bug #109997.

  04 Nov 2005; Fabian Groffen <grobian@gentoo.org> urt-3.1b-r1.ebuild:
  Marked ppc-macos as dependency of bug #109997

  03 Nov 2005; Mark Loeser <halcy0n@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on x86; bug #109997

  31 Oct 2005; Brent Baude <ranger@gentoo.org> urt-3.1b-r1.ebuild:
  Marking urt-3.1b-r1 ppc64 stable so libgif can be marked stable per bug 109997

  31 Oct 2005; Gustavo Zacarias <gustavoz@gentoo.org> urt-3.1b-r1.ebuild:
  Stable on sparc wrt #109997
