@@ -1,21 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX gentoo-config 949 RMD160 2c492473f38b0d2b27be21c7cb43db3c35b71554 SHA1 43bdd4eced3feac875e338baedf1e34ae0c8f293 SHA256 2760897a7b9848154f4ccb1f8c31b59f7fd8952513cb45ef659d89d342f37caa
-AUX urt-3.1b-build-fixes.patch 5182 RMD160 381b76a57d993112b022b53dd58a19ef21c7684f SHA1 8e6f87831c30d28346e042985211c737eafc2275 SHA256 e4e768b8198fa1f1c76e308ae931dee483cdd58fdc9e14b079cfddb083c5d6d7
-AUX urt-3.1b-compile-updates.patch 3397 RMD160 6e71cb6ccbf67a9efffbc625cfeb3d7bcd974433 SHA1 756c9b8fd593ad02c9d3a14becba98ea3c4e638e SHA256 b4f1b926bc3592ed44b2913a29fab3dd8265007dd9c395541691816344909d16
-AUX urt-3.1b-make.patch 2455 RMD160 27b182e3d3e967e71dc8197f6ea21a8baa9cdf4e SHA1 00e0b81c70605c16538e2806498189a55354883d SHA256 50fe429544c72eb21460cbd9e3283166f9cc703ade7e3b5529537d908e6361de
-AUX urt-3.1b-rle-fixes.patch 5072 RMD160 5574f0f079aa458e189520c6cddddf536cd3da7a SHA1 18d693e87c8e30d84ab89368e17ca1cb02eb761c SHA256 02e71a51b6ce7d9565ed5501a7f93429ec6697ceb9a700833fdf62229fbcdef7
-AUX urt-3.1b-solaris.patch 288 RMD160 d0d4bdcbf17a3bebca5131ef1a67d10616b5bd8c SHA1 80b8002481fd5ad9a54b84e0a676b72141296d1e SHA256 73ca1a679be406394cad43317fad3ffee5186c7e150cb4c02d0c3616cfff1d12
-AUX urt-3.1b-tempfile.patch 593 RMD160 2d1b9dcb817521f9318896237ef89d362fc21bd5 SHA1 199070edd769b5cd7c21c91c8b92a23147b0d2ea SHA256 4b5c741ed1f55ec83e7076e45eda6b88828fbb6b0af6192eb97dd0a285151f45
-DIST urt-3.1b.tar.Z 1016405 RMD160 fd99f3a4ec7cb6c9195752e227ad95428e331bba SHA1 370b19c9e7019a7258754e7494b7ae2d7fe138ac SHA256 6d8b67f03507818ebdca3a342c96454780cc5eadcc58ac2713cbcdfdb61a6b41
-EBUILD urt-3.1b-r1.ebuild 2026 RMD160 16dc98b09e831487cfc4b3f452801c2e80e43ad9 SHA1 1e637b28003b3b0a419e4a5845a7ea9a2f2e6b15 SHA256 fdc7204375fe08b63189e690f922c685808683ef10a9a140a1a698e611a7a1f7
-MISC ChangeLog 4121 RMD160 ea7b0cefb14971a165cda020a7d959fab33c7440 SHA1 28a6417f63bcfbc5e79d3a0dbf9b70506f433711 SHA256 2c1345cdff6c1b8c60b8ecf30728bfafdc4905c91d14543702da3fda221e6ccd
-MISC metadata.xml 234 RMD160 c0b6d678b523f663beeb6ce0bf5c26ebdbdaf4af SHA1 0d8cc03f08618ea2e48c2aacd096eb5cc201e123 SHA256 0b0cb7fa2ef4803e6696725c95405df7a18191208a6c042bdea04047b575348b
+AUX gentoo-config 949 SHA256 2760897a7b9848154f4ccb1f8c31b59f7fd8952513cb45ef659d89d342f37caa SHA512 a5200001a1d4952b625a365c0c7f4207295b2c3e788541c10e98a3e666668bcabbcad8133f2dce14da3a5fcbd5181d919ea7079b2c844b8148d53a60ce2de092 WHIRLPOOL d92b513eead24f16bb6e09469500291c26c7e7f3ba2c389a69686b1ece3b85fadea6fd9e12b8ba9a574c2319049991fcafb8c1de6d1dc8d713c742535007dd2f
+AUX urt-3.1b-build-fixes.patch 5182 SHA256 e4e768b8198fa1f1c76e308ae931dee483cdd58fdc9e14b079cfddb083c5d6d7 SHA512 0649f89182b7d197e126ea5874be7c531a5396953a56d360d7e8809f9fc1694646dbbcce871893d9015d2e6d62d828d082c045cf2fd68fd9621059fa6fff75fa WHIRLPOOL 0ea261431363e29b6bb2706de740e5101f8496560c67948a49b0c16bc3d3cfa878ef3bade03a21c345f45fca99b55d5acf1d6b63c1b0d25d64975d78858869c8
+AUX urt-3.1b-compile-updates.patch 3397 SHA256 b4f1b926bc3592ed44b2913a29fab3dd8265007dd9c395541691816344909d16 SHA512 27f2266983c108d166e8704512beec36a57a14e9f92b226a33195deaf9966ef089e29bd739061a35bcbfc0601e45ab270a654b0f036d23c4e2bdc9607609b683 WHIRLPOOL a64140744285f691d7d33c4265220346278736ed3b9f7a69914246fff6e7aac966e27158c869475c5d6cd7df18ee94691831bd4f12682f2e5f6d99884863f00c
+AUX urt-3.1b-make.patch 2455 SHA256 50fe429544c72eb21460cbd9e3283166f9cc703ade7e3b5529537d908e6361de SHA512 44b4463fb9b63e5a0c9af3f574ff523138117f7e0b5012e4bbd5c7b3119797f812410da7909d22dce914017bc3e704ea830307d63f908b4c508b48fff8d8898a WHIRLPOOL bb792767cb895305bab56b663586cf31b9dd752fe53141eb785dc609573737dd96e29a12440d46206dcb0abd970e5ab4e2afae5af5c83716576b55a9af6302ea
+AUX urt-3.1b-rle-fixes.patch 5072 SHA256 02e71a51b6ce7d9565ed5501a7f93429ec6697ceb9a700833fdf62229fbcdef7 SHA512 ea6b5211ff23abd9480b371ef4fb0feb87b759621d8604ec6634c38f3ed66dbc0327e01fc4382f03ae41bf1133e9a21844235f59b15e24072efc5dc7ecacac51 WHIRLPOOL cca30f58e7b0c7ef9ed9231c418704e0cb11251b0cfcf744f03834a3601e024fa6fc23093e9b591d4659306e90cecaca08dfa81cc10364109aa0c385a050b4bc
+AUX urt-3.1b-solaris.patch 288 SHA256 73ca1a679be406394cad43317fad3ffee5186c7e150cb4c02d0c3616cfff1d12 SHA512 e013e35181ae6609fe2a210dd1d3d3d00ddc372836b50e62d7fb7bafde0f1b38b5d8d0c167fed36820bf00002588bf081439688a88087aaa3f1913eb822bfb56 WHIRLPOOL bc8a604c6aefbbcc2c2f854c7468b1429aa551716b55667e6692738a6b9c0cdc83169bc2d8dd41e5dccc79845906c52fc802be350f67a9337af7e4b02745c136
+AUX urt-3.1b-tempfile.patch 593 SHA256 4b5c741ed1f55ec83e7076e45eda6b88828fbb6b0af6192eb97dd0a285151f45 SHA512 d456b7219a3d7986698f8f4f7b75c6b10c5b4d9fb5ef1491ec3e85e4263832f24514d187f31a5c76c747dd9381cb7a6be94b1c2147153e774c70dec7b5ca1b11 WHIRLPOOL 2eec5ed61d324eee418040dc31d8a981f20bcbdd984f7bb2b63478b2323424de48467c59d003779ca3c6d30b52dbf811d2fde32a935075da22dae70f7b728d41
+DIST urt-3.1b.tar.Z 1016405 SHA256 6d8b67f03507818ebdca3a342c96454780cc5eadcc58ac2713cbcdfdb61a6b41 SHA512 6c9070cd106f1d696d22f862cc1c4e10325fafc7bae51e8bb1fb98f6bf8babe21a133e21b3acc0c11cf1b28a23123c8ee7bb064c9d86301b14a1c217fbe1a12d WHIRLPOOL 8930cafe6391f5164bde8c464d2b3af08b740c500639f1bfc846dbec0b4285f6653b537c11c53ef992c9078e15466cb9597270605e5deee05f0991a0fed6ecf1
+EBUILD urt-3.1b-r1.ebuild 2051 SHA256 023ccf91e6b82ff4902e5d64946df9f3976c520e836869d7712acea02ea3d4a9 SHA512 2c8411c643b71c7cf5b791439432dccaa48f6ba8c2c635bb5bfba01fecc624f163d4d894ba3b733272e3aa5a278d96b9132d39fe021a0b55c4dd5755a404ec06 WHIRLPOOL 3362d4a5c8c16236ee8631fa41dd0b48b52625beab8e735949dbd26e50a743861b601f575c7151d1ed4ce55d3f4a0b540ac7424e63290e187b47e23f93dbe96a
+MISC ChangeLog 4304 SHA256 7f463fd531134f9c54a607e8216718319503a3f1098eeff9246a50cdefd7934b SHA512 ee66b8f70706238322df69cf1299e845774c5207f957155be6600824e37bed654b08c55239bb5f0a86bd7070ecc5f1ecec46676d2889d6886a12883fd59553f8 WHIRLPOOL d73c4d4ce2b4af9076e739a1d5f1c6d5f46cafaedbf2cbe20676e9fe2037f85b6c55b0fad205798154f91bd8f7bff195620aa1c42608366a32a9c1c2fb2f8722
+MISC metadata.xml 161 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1 SHA512 425caf0160f1410ce7bf1d4639020be7f6335152c339edbce80676bff4166f1cab3ae9e13161c47b98dc00741dab3bfa45e9572a3314844476e480f5c2b58d7d WHIRLPOOL ad7cdd3352dbc12cb4181fb5d63b5aee5ce3a151b975c12a96c4a5c91f751736d27282ad22633c7e768230266bce5d17947735d33ef5c5c2341c3f9435b9ebb0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+5K6gACgkQX3X2B8XHTolRIQCfXtjQd8EqZPecEGzFEhMFreUa
-4ugAoJS3IQkW7GgKUe3Lr4zXWrhelQ8M
-=lzRw
+iEYEAREIAAYFAlCK4dIACgkQX3X2B8XHTomyEgCdFmvyeqzwcAlt2ABCocbMyUzZ
+IwgAnjoJWEL/znYgHa/XYBLbJrXk7ZwL
+=yJdR
 -----END PGP SIGNATURE-----
