@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>graphics</herd>
-  <use>
-    <flag name="gs">Add support for postscript</flag>
-  </use>
+<herd>graphics</herd>
 </pkgmetadata>
